--- a/lab 3/lab3_Sydorenko.Rmd
+++ b/lab 3/lab3_Sydorenko.Rmd
@@ -32,6 +32,26 @@ bibliography: references_lab.bib
 програмування R; набути навичок роботи у середовищі RStudio із
 застосуванням концепції "грамотного програмування" із застосуванням
 пакету R Markdown*.
+*Хід роботи*
+|
+
+:Таблиця 1 -- __Теоретичні та емпіричні (вибіркові) числові характеристики випадкової величини__
+
+
+Назва числової характеристики | теоретичне значення | Вибіркове значення, $n=100$ | Вибіркове значення, $n=1000$ |
+--------|----|------|---------
+$a$|$a$| $\tilde a$ | $\tilde a$
+$\sigma$|$\sigma$|$\tilde{\sigma}$|${\tilde{\sigma}}$
+Математичне сподівання|$m(x)$|$\tilde{m}(x)$|$\tilde{m}(x)$
+Дисперсія|$D(x)$|$\tilde{D}(x)$|$\tilde{D}(x)$
+Виправлена дисперсія||$\tilde{\tilde{D}}(x)$|$\tilde{\tilde{D}}(x)$
+СКВ|$\sigma(x)$|$\tilde{\sigma}(x)$|$\tilde{\sigma}(x)$
+Виправлене СКВ||$\tilde{\tilde\sigma}(x)$|$\tilde{\tilde\sigma}(x)$
+Центральний момент $3$-го порядку|$\mu_3$|$\tilde{\mu}_3$|$\tilde{\mu}_3$
+Центральний момент $4$-го порядку|$\mu_4$|$\tilde{\mu}_4$|$\tilde{\mu}_4$
+Асимерія|$A_s$|$\tilde{A}_s$|$\tilde{A}_s$
+Ексцес|$E_k$|$\tilde{E}_k$|$\tilde{E}_k$
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -69,45 +89,45 @@ summary(X)
 
 ```{r}
 op <- par(mfrow = c(2,2))
-# Гістограма відносних частот
+Fn <- ecdf(table(cut(X, nclass.Sturges(X))))
+Fn <- ecdf(X)
+  
 hist(X,
-  freq = FALSE,
-  col = "Lightgray",
-  main="Histogram",
-  border=4)
+freq = FALSE,
+col = "Lightgray",
+main="Histogram",
+border=4)
 curve(dnorm(x, a, s),
-  col = 2,
-  lty = 2,
-  lwd = 2,
-  add = TRUE) # крива щільності
+col = 2,
+lty = 2,
+lwd = 2,
+add = TRUE)
+
 plot(Fn,
-  main = "Quantile Plot",
-  verticals = TRUE,
-  col.points = "blue",
-  col.hor = "red",
-  col.vert = "bisque",
-  xlab = "X",
-  ylab = "Fn(x)")
+main = "Quantile Plot",
+verticals = TRUE,
+col.points = "blue",
+col.hor = "red",
+col.vert = "bisque",
+xlab = "X",
+ylab = "Fn(x)")
+
 boxplot(X,
 main = "Box-and-Wisker Plot",
 col = "Lightgray",
 border = 4,
 xlab = "X",
 ylab = "",
-horizontal = TRUE) # боксплот
-beeswarm(X,
-col = 2,
-add = TRUE,
-horizontal = TRUE) # ДОДАВАННЯ "рою" з ефектом jutter
+horizontal = TRUE) 
+
+stripchart(X, method = "jitter", col = 2, add = TRUE) 
+
 plot(density(X, adjust=2),
 main = "density trace",
 xlab = "X",
 ylab = "Dencity",
 col="blue")
-rug(X,
-col=2,
-main="fn(x)") # Виділення точками місць з найбільшою щільністю значень
-##Відповіді на контрольні запитання
+rug(X, ticksize = 0.01, col="blue")
 ```
 
 ```{r echo=FALSE}
@@ -136,7 +156,6 @@ results <- data.frame(
   Характеристика = c("Математичне сподівання", "Дисперсія", "Виправлена дисперсія", 
                      "СКВ", "Виправлене СКВ", "Центральний момент 3-го порядку",
                      "Центральний момент 4-го порядку", "Асимметрія", "Ексцес"),
-  Теоретичне_значення = c(a, s^2, NA, s, NA, NA, NA, NA, NA),
   Вибірка_X = c(mean(X), var(X), var(X) * n / (n - 1), sd(X), sqrt(var(X) * n / (n - 1)),
                 mu_3, mu_4, A_s, E_k),
   Вибірка_X3 = c(mean(X3), var(X3), var(X3) * n3 / (n3 - 1), sd(X3), 
@@ -146,12 +165,65 @@ results <- data.frame(
 kable(results, caption = "Результати обчислень")
 ```
 
-: Таблиця 3 -- **Теоретичні та емпіричні (вибіркові) числові
-характеристики випадкової величини**
 
-##Контрольні запитання 1. Що таке вибірка? 2. Як можна оцінити вибіркове
-математичне сподівання? 3. Які існують міри розміювання? 4. Які міри
-форми розподілу вам відомі? Що вони характеризують? Як їх оцінити на
-практиці?
+ #Контрольні запитання 
+ 
+ __1. Що таке вибірка?__
+ 
+ Вибірка — це підмножина даних, яка вибирається з більшої сукупності, що називається генеральною сукупністю. Вибірка використовується для проведення досліджень і аналізу, коли неможливо або недоцільно працювати з усією генеральною сукупністю.
+ 
+ __2. Як можна оцінити вибіркове математичне сподівання?__
+ 
+ Вибіркове математичне сподівання — це середнє значення всіх елементів у вибірці. Воно є оцінкою математичного сподівання генеральної сукупності. Це те, що майже середнє арифметичне і обчислюється за формулою:
 
-## References
+\[
+\overline{X} = \frac{1}{n} \sum_{i=1}^{n} X_i
+\]
+
+де:
+
+- \(\overline{X}\) — вибіркове математичне сподівання,
+- \(n\) — кількість елементів у вибірці,
+- \(X_i\) — значення кожного окремого елемента вибірки.
+ 
+ __3. Які існують міри розcіювання?__
+ Основні міри розсіювання:
+Існує декілька основних мір розсіювання, які використовуються для оцінки варіативності або розподілу даних у вибірці чи генеральній сукупності. Ось найпоширеніші з них:
+
+1. **Розмах (Range)**
+
+2. **Дисперсія (Variance)**
+
+3. **Середньоквадратичне відхилення**
+
+4. **Квартильне відхилення**
+
+5. **Середнє абсолютне відхилення**
+
+Кожна з цих мір має свої особливості і використовується в залежності від специфіки даних і цілей аналізу.
+
+ __4. Які міри форми розподілу вам відомі? Що вони характеризують? Як їх оцінити на практиці?__
+ 
+Міри форми розподілу використовуються для аналізу і опису особливостей форми розподілу даних. Основні міри включають:
+
+1. **Асиметрія:**
+   - Характеризує асиметричність розподілу. Вказує на те, як сильно розподіл нахилений вліво або вправо відносно середнього значення.
+   - Формула для вибіркової асиметрії:
+     \[
+     A_s = \frac{1}{n} \sum_{i=1}^{n} \left(\frac{X_i - \overline{X}}{s}\right)^3
+     \]
+   - Практичне значення:
+     - Якщо асиметрія > 0, розподіл нахилений вправо (довший хвіст справа).
+     - Якщо асиметрія < 0, розподіл нахилений вліво (довший хвіст зліва).
+     - Якщо асиметрія ≈ 0, розподіл симетричний.
+
+2. **Ексцес:**
+   - Характеризує "высоту" та "гостроту" розподілу в порівнянні з нормальним розподілом.
+   - Формула для вибіркового ексцесу:
+     \[
+     E_k= \frac{1}{n} \sum_{i=1}^{n} \left(\frac{X_i - \overline{X}}{s}\right)^4 - 3
+     \]
+   - Практичне значення:
+     - Ексцес > 0: розподіл має гострішу вершину (висококуртний, або лептокуртичний).
+     - Ексцес < 0: розподіл має більш плоску вершину (платикуртичний).
+     - Ексцес = 0: розподіл має нормальну "висоту" (месокуртичний).
